# MCP_AGENT_1

./: .gitignore  README.md  pyproject.toml  servers.yaml  setup.py  start_servers.py
agents/: __init__.py  calendar_agent.py  memory_agent.py  tasks_agent.py
client/: 01a_simple_client.py  01a_simple_client_crawler.py  01a_simple_client_memory.py  01b_client.py  02_llm.py  03_agents.py  chat_client.py  llm_client.py  sse_client.py
client/agents/: intent_classifier.py  test_intent_classifier.py  tool_executor.py
client/utils/: client_manager.py
core/: config.py  mcp_client.py  models.py
core/utils/: __init__.py  client.py  memory.py  starlette.py  structured_responses.py  tasks.py
examples/: calendar_demo.py  memory_demo.py
server/: crawler_server.py  server_calendar.py  server_memory.py  server_tasks.py
server/tools/: crawler_tools.py
server/utils/: memory.py  starlette.py
src/examples/: calendar_demo.py  crawler_demo.py  llm_demo.py  memory_demo.py
src/mcp/: __init__.py
src/mcp/agents/: calendar_agent.py  crawler_agent.py  memory_agent.py  tasks_agent.py
src/mcp/client/: client.py
src/mcp/core/: __init__.py  config.py  database.py  mcp_client.py
src/mcp/server/: fastmcp.py  sse.py
src/mcp/utils/: llm_providers.py  llm_utils.py  tasks.py  tool_discovery.py
src/tests/: test_config.py
tasks/: user.json
tests/: __init__.py  test_config.py
tools/: __init__.py  crawler_tools.py  tool_discovery.py
